# product-to-storage

./: .env  .gitignore  pyproject.toml
linkedService/: anineproductdatabricks.json  anineproductstorage.json
pipeline/: ingest.json
product_to_storage/data/: data_importer.py  data_transformer.py
tests/: test_product_to_storage.py
